# rust-server

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: Publish.yml  production_client.yml  production_docker.yml
Docs/: dev_todos.md
documents/Development/: Todos.md
scripts/: entrypoint.sh
src/: main.rs  server.rs  state.rs
src/api/: router.rs
src/core/queue/: consumer.rs  producer.rs
src/core/websocket/: handler.rs
src/modules/: mod.rs
src/modules/agent/: handler.rs
src/modules/ingestion/: handler.rs
src/modules/retrieval/: routes.rs
src/views/: chat.html  index.html  stardust.html
