[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lapin = "2.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
prometheus = "0.13"
metrics-exporter-prometheus = "0.12"
tracing = "0.1"
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"